adds next several sections

--- a/src/html/_who-works-with-us.htm
+++ b/src/html/_who-works-with-us.htm
@@ -1,14 +1,18 @@
+<!-- who works with us section -->
+
 <section class="section">
         <div class="container">
                 <h2 class="section-title">Who works with us</h2>
                 <ul class="who-works__list">
                         <li class="who-works__item item-1">
+                                <span class="who-works__img">&#129333</span>
                                 <h3 class="who-works__item-title">SEO agencies</h3>
                                 <p class="who-works__item-text">ProLINKovka provides white hat link building services with special terms for
                                         agencies: special prices, guarantees and much more.
                                 </p>
                         </li>
                         <li class="who-works__item item-2">
+                                <span class="who-works__img">&#x1F468&#x200D&#x1F4BB</span>
                                 <h3 class="who-works__item-title">Individual seo specialists
                                 </h3>
                                 <p class="who-works__item-text">We propose you a win-win strategy: our referral programm. You invite your clients to
@@ -17,6 +21,7 @@
                                 </p>
                         </li>
                         <li class="who-works__item item-3">
+                                <span class="who-works__img">&#x1F469&#x200D&#x1F3A8</span>
                                 <h3 class="who-works__item-title">Business owners
                                 </h3>
                                 <p class="who-works__item-text">You do not need to remember all those parameters of sites: da, pa, pr, moz etc. You
@@ -25,6 +30,7 @@
                                 </p>
                         </li>
                         <li class="who-works__item item-4">
+                                <span class="who-works__img">&#x1F469&#x200D&#x1F680</span>
                                 <h3 class="who-works__item-title">In-House SEO Teams
                                 </h3>
                                 <p class="who-works__item-text">We place contextual and relevant links with the premium quality. We will make a
