--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 			<main>
 				@@include('html/_hero.htm',{})
 				@@include('html/_who-works-with-us.htm',{})
+				@@include('html/_how-we-help.htm',{})
 			</main>
 			@@include('html/_footer.htm',{})
 		@@include('html/_js.htm',{})
