--- a/src/html/_how-we-help.htm
+++ b/src/html/_how-we-help.htm
@@ -1,6 +1,6 @@
 <!-- How we help section -->
 
-<div class="section">
+<section class="section">
     <div class="container">
         <h2 class="section-title">How we help your site</h2>
         <ul class="how-we-help__list">
@@ -15,4 +15,4 @@
             </li>
         </ul>
     </div>
-</div>
+</section>
