--- a/src/html/_mobile-menu.htm
+++ b/src/html/_mobile-menu.htm
@@ -1,5 +1,5 @@
 <!-- Mobile pop-up menu -->
-<div class="mobile-menu" data-menu>
+<section class="mobile-menu" data-menu>
   <div class="mobile-menu__head-wrapper">
     <a href="./">
       <svg class="header__logo" width="91px" height="26px">
@@ -41,4 +41,4 @@
     </ul>
   </nav>
   <a class="mobile-nav__contact-link" href="./#contacts">Contact us</a>
-</div>
+</section>
