--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
 				@@include('html/_hero.htm',{})
 				@@include('html/_who-works-with-us.htm',{})
 				@@include('html/_how-we-help.htm',{})
+				@@include('html/_link-types.htm',{})
+				@@include('html/_countries.htm',{})
+				@@include('html/_packages.htm',{})
 			</main>
 			@@include('html/_footer.htm',{})
 		@@include('html/_js.htm',{})
