adds not completed packages section

--- a/src/html/_countries.htm
+++ b/src/html/_countries.htm
@@ -9,7 +9,7 @@
             </h2>
             <p class="countries__text">We work with 40+ countries:</p>
             <div class="countries__list-wrapper">
-                <ul class="countries__list-left">
+                <ul class="list countries__list-left">
                     <li class="countries__item">
                         <svg class="countries__svg" width="20px" height="20px">
                             <use xlink:href="../img/sprite.svg#us"></use>
@@ -41,7 +41,7 @@
                         <p class="country-name">Spain</p>
                     </li>
                 </ul>
-                <ul class="countries__list-right">
+                <ul class="list countries__list-right">
                 <li class="countries__item">
                         <svg class="countries__svg" width="20px" height="20px">
                             <use xlink:href="../img/sprite.svg#ca"></use>
