--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -19,7 +19,7 @@
 
 <!-- Desktop Header -->
     <nav class="header__nav">
-      <ul class="header__list">
+      <ul class="list header__list">
         <li class="header__item">
           <a class="header__link" href="./#link-types">Link types</a>
         </li>
