--- a/src/html/_how-we-help.htm
+++ b/src/html/_how-we-help.htm
@@ -3,7 +3,7 @@
 <section class="section">
     <div class="container">
         <h2 class="section-title">How we help your site</h2>
-        <ul class="how-we-help__list">
+        <ul class="list how-we-help__list">
             <li class="how-we-help__item"> <div class="how-we-help__img-wrapper"><img class="how-we-help__img" src="img/how-we-help/help-1.png" alt=""></div>
                 <p class="how-we-help__text">Set positive dynamics for a link profile</p>
             </li>
