--- a/src/html/_link-types.htm
+++ b/src/html/_link-types.htm
@@ -2,7 +2,7 @@
 <section class="section">
     <div class="container">
         <h2 class="section-title">Link types we make</h2>
-        <ul class="link-types__list">
+        <ul class="list link-types__list">
             <li class="link-types__item"><img src="img/link-types/link-types-1.png" alt="" class="link-types__img">
                 <h3 class="link-types__item-title">Forum links + Q/A websites</h3>
                 <p class="link-types__text">Safe and natural links for boosting your business.<br><br>Expert comments which lead to your site can help with brand awarness, developing link profile and keywords ranking.</p>
