--- a/src/html/_mobile-menu.htm
+++ b/src/html/_mobile-menu.htm
@@ -13,7 +13,7 @@
     </button>
   </div>
   <nav>
-    <ul class="mobile-nav__list">
+    <ul class="list mobile-nav__list">
       <li class="mobile-nav__item">
         <a class="mobile-nav__link" href="./#clients">Clients</a>
       </li>
