--- a/src/html/_packages.htm
+++ b/src/html/_packages.htm
@@ -2,7 +2,7 @@
 <section class="section">
     <div class="container">
         <h2 class="section-title">Choose backlink package</h2>
-        <ul class="packages__list">
+            <ul class="list packages__list">
             <li class="packages__item">
                 <h3 class="packages__item-title">Dofollow SEO links</h3>
                 <p class="packages__item-subtitle">40 forum links</p>
@@ -16,18 +16,50 @@
                     <li class="packages__item-item">detailed report</li>
                     <li class="packages__item-item">personal manager</li>
                 </ul>
-                <span>390$</span>
-                <button type="button" class="button form__button">
+                <p class="packages__price">390$</p>
+                <button type="button" class="button form__button packages__button">
+                    <span class="form__button-text">Choose Plan</span>
+
+                </button>
+            </li>
+            <li class="packages__item packages__item-active">
+                <h3 class="packages__item-title">Local directories links</h3>
+                <p class="packages__item-subtitle">50 directories links
+                </p>
+                <ul class="packages__item-list">
+                    <li class="packages__item-item">duration of posting – 1 month</li>
+                    <li class="packages__item-item">placement guarantees</li>
+                    <li class="packages__item-item">manual moderation</li>
+                    <li class="packages__item-item">detailed report</li>
+                    <li class="packages__item-item">personal manager</li>
+                </ul>
+                <p class="packages__price">250$</p>
+                <button type="button" class="button form__button packages__button-active">
                     <span class="form__button-text">Choose Plan</span>
 
                 </button>
             </li>
             <li class="packages__item">
-                <h3 class="packages__item-title"></h3>
-            </li>
-            <li class="packages__item">
-                <h3 class="packages__item-title"></h3>
+                <h3 class="packages__item-title">Complex Link Building</h3>
+                <p class="packages__item-subtitle">60 mix of links
+                </p>
+                <ul class="packages__item-list">
+                    <li class="packages__item-item">duration of posting – 1 month</li>
+                    <li class="packages__item-item">forum, profile and local directories</li>
+                    <li class="packages__item-item">placement guarantees</li>
+
+                    <li class="packages__item-item">manual moderation</li>
+                    <li class="packages__item-item">detailed report</li>
+                    <li class="packages__item-item">personal manager</li>
+                </ul>
+                <p class="packages__price">330$</p>
+                <button type="button" class="button form__button packages__button">
+                    <span class="form__button-text">Choose Plan</span>
+
+                </button>
             </li>
         </ul>
+  <div class="packages__contact-text-wrapper">      <p class="packages__contact-text">Wanna get personal terms or another number of links?</p>
+  <a class="packages__contact-link" href="">Contact us</a></div>
     </div>
 </section>
