--- a/src/html/_who-works-with-us.htm
+++ b/src/html/_who-works-with-us.htm
@@ -3,7 +3,7 @@
 <section class="section">
         <div class="container">
                 <h2 class="section-title">Who works with us</h2>
-                <ul class="who-works__list">
+                <ul class="list who-works__list">
                         <li class="who-works__item item-1">
                                 <span class="who-works__img">&#129333</span>
                                 <h3 class="who-works__item-title">SEO agencies</h3>
