--- a/src/html/_pagging.htm
+++ b/src/html/_pagging.htm
@@ -1,6 +1,6 @@
 <div class="pagging">
 	<a href="" class="pagging__arrow"></a>
-	<ul class="pagging__list">
+	<ul class="list pagging__list">
 		<li>
 			<a href="" class="pagging__item _active">1</a>
 		</li>
