adds next-steps section

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
 				@@include('html/_link-types.htm',{})
 				@@include('html/_countries.htm',{})
 				@@include('html/_packages.htm',{})
+				@@include('html/_next-step.htm',{})
+				@@include('html/_contact-us.htm',{})
 			</main>
 			@@include('html/_footer.htm',{})
 		@@include('html/_js.htm',{})
